--- a/research/3_prepare_callbacks.ipynb
+++ b/research/3_prepare_callbacks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bd890112",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'c:\\\\Users\\\\LONG\\\\Computer Science\\\\Artificial Intelligence\\\\Projects\\\\End-To-End-Chicken-Disease-Classification'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ba1dfa95",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "39f4e7af",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d0a11c5c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
-    "    def prepare_callback_config(self) -> PrepareCallbacksConfig:\n",
+    "    def get_prepare_callbacks_config(self) -> PrepareCallbacksConfig:\n",
     "        config = self.config.prepare_callbacks\n",
     "        model_ckpt_dir = os.path.dirname(config.checkpoint_model_filepath)\n",
     "        create_directories(\n",
@@ -76,7 +76,7 @@
     "        )\n",
     "\n",
     "        prepare_callbacks_config = PrepareCallbacksConfig(\n",
-    "            root_dir=config.root_dir,\n",
+    "            root_dir=Path(config.root_dir),\n",
     "            tensorboard_root_log_dir=Path(config.tensorboard_root_log_dir),\n",
     "            checkpoint_model_filepath=Path(config.checkpoint_model_filepath),\n",
     "        )\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "059024c6",
    "metadata": {},
    "outputs": [],
@@ -99,20 +99,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "94b9a12c",
    "metadata": {},
    "outputs": [],
    "source": [
     "class PrepareCallback:\n",
-    "    def __init__(self, config:PrepareCallbacksConfig):\n",
-    "        self.config=config\n",
-    "        \n",
+    "    def __init__(self, config: PrepareCallbacksConfig):\n",
+    "        self.config = config\n",
+    "\n",
     "    @property\n",
     "    def _create_tb_callbacks(self):\n",
-    "        timestamp=time.strftime('%Y-%m-%d-%H-%M-%S')\n",
-    "        tb_running_log_dir=os.path.join(self.config.tensorboard_root_log_dir)"
+    "        timestamp = time.strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
+    "        tb_running_log_dir = os.path.join(\n",
+    "            self.config.tensorboard_root_log_dir, f\"tb_logs_at_{timestamp}\"\n",
+    "        )\n",
+    "        return tf.keras.callbacks.TensorBoard(log_dir=tb_running_log_dir)\n",
+    "\n",
+    "    @property\n",
+    "    def _create_ckpt_callbacks(self):\n",
+    "        return tf.keras.callbacks.ModelCheckpoint(\n",
+    "            filepath=self.config.checkpoint_model_filepath, save_best_only=True\n",
+    "        )\n",
+    "\n",
+    "    def get_tb_ckpt_callbacks(self):\n",
+    "        return [self._create_tb_callbacks, self._create_ckpt_callbacks]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "be0cd490",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-05-15 10:33:23,902: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-05-15 10:33:23,917: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-05-15 10:33:23,921: INFO: common: created directory at: artifacts]\n",
+      "[2025-05-15 10:33:23,927: INFO: common: created directory at: artifacts\\prepare_callbacks\\checkpoint_dir]\n",
+      "[2025-05-15 10:33:23,929: INFO: common: created directory at: artifacts\\prepare_callbacks\\tensorboard_root_log_dir]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    prepare_callbacks_config = config.get_prepare_callbacks_config()\n",
+    "    prepare_callbacks = PrepareCallback(config=prepare_callbacks_config)\n",
+    "    callback_list = prepare_callbacks.get_tb_ckpt_callbacks()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bd72c909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tb_logs_at_2025-05-15-10-36-26\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "timestamp = time.strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
+    "print(f\"tb_logs_at_{timestamp}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a35cf4c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
